[BUGFIX] Fix overflow of labels in localization mode buttons
The localization mode buttons rendered in the localization wizard used
in the "Page" module overflows its text content outside the buttons.

To preserve the alignment in multiline scenarios, block buttons
are extended to allow line wrap, while preserving centered rendering.

Resolves: #105853
Releases: main, 13.4
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/87576
Tested-by: core-ci <typo3@b13.com>
Tested-by: Andreas Kienast <akienast@scripting-base.de>
Tested-by: Marvin Buchmann <marvin.buchmann@typo3.com>
Tested-by: Benjamin Franzke <ben@bnf.dev>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -2550,7 +2550,7 @@ typo3-backend-formengine-suggest-result-item .formengine-suggest-result-item-lab
 .btn-icon{--typo3-btn-padding-y:var(--typo3-input-sm-padding-y);--typo3-btn-padding-x:var(--typo3-input-sm-padding-y)}
 .btn-block{display:flex;width:100%}
 .btn-block+.btn-block{margin-top:calc(var(--typo3-spacing)*.5)}
-.btn-block-vertical{flex-direction:column;width:100%}
+.btn-block-vertical{flex-direction:column;text-align:center;white-space:normal;width:100%}
 .btn-align-start{justify-content:start}
 .btn-align-end{justify-content:end}
 .btn-group{position:static}
